manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dumbkv-service
  labels:
    app: dumbkv
spec:
  selector:
    app: dumbkv
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
