manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dumbkv-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dumbkv.example.com
    secretName: dumbkv-tls
  rules:
  - host: dumbkv.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dumbkv-service
            port:
              number: 80
